adding get my post route
